Add Friends, Chats

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>11%</span>
+        <span>99%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -33,9 +33,9 @@
         <p class="welcome-header__text">If you have a KokoaTalk Account,<br>log in with your email or phone number.</p>
     </header>
 
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number"/>
-        <input type="text" placeholder="Password"/>
+    <form action="friends.html" method="get" id="login-form">
+        <input name="username" type="text" placeholder="Email or phone number"/>
+        <input name="password" type="password" placeholder="Password"/>
         <br>
         <input type="submit" value="Log In"/>
         <input type="submit" value="Sign Up"/>
