--- a/friends.html
+++ b/friends.html
@@ -45,9 +45,9 @@
     <main class="friends-screen">
       <div class="user-component">
         <div class="user-component__column">
-          <img src="img/avatar.jpg" class="user-component__avatar user-component__avatar--xl"/>
+          <img src="img/me.jpg" class="user-component__avatar user-component__avatar--xl"/>
           <div class="user-component__text">
-            <h4 class="user-component__title">Chikcinjae</h4>
+            <h4 class="user-component__title">김인재</h4>
             <!--<h6 class="user-component__subtitle">this</h6>-->
           </div>
         </div>
@@ -60,7 +60,7 @@
         </div>
         <div class="user-component">
           <div class="user-component__column">
-            <img src="img/avatar.jpg" class="user-component__avatar user-component__avatar--sm"/>
+            <img src="img/icon_ch.jpg" class="user-component__avatar user-component__avatar--sm"/>
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
             </div>
@@ -83,6 +83,14 @@
         <li class="nav__btn"><a class="nav__link" href="more.html"><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
       </ul>
     </nav>
+
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/5d0ed180e6.js"
