--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <a href="#">Find KokoaTalk Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/5d0ed180e6.js"
       crossorigin="anonymous"
